style.css
:root {
  --bg-color: rgb(1, 4, 90);
  --element-bg-color: rgb(0, 5, 162);
  --button-hovered-color: rgb(0, 5, 150);
  --button-pressed-color: rgb(0, 5, 140);
}

body {
  background-color: var(--bg-color);
}
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background: var(--bg-color);
}

#progress-indicator {
  color: white;
  font-size: 30px;
  margin-bottom: 20px;
  display: flex;
  border-style: solid;
  border-radius: 10px;
  border-color: black;
  padding: 5px 5px;
  border-width: 2px;
  background: var(--element-bg-color);
}

#card-div {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 25%;
  word-wrap: break-word;
  hyphens: auto;
  perspective: 1000px;
}
#actions-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  width: 600px;
}
button {
  background: var(--element-bg-color);
  font-size: 50px;
  font-family: Consolas;
  color: white;
  padding: 10px 20px;
  border-radius: 10px;
  border-style: solid;
  transition: transform 0.1s;
}
button:hover {
  background: var(--button-hovered-color);
}
button:active {
  transform: scale(0.98);
  background: var(--button-pressed-color);
}
.menu-button {
  margin-top: 30px;
  width: 100%;
  height: 100%;
  font-size: 30px;
  word-wrap: break-word;
  hyphens: auto;
}

.action-button {
  margin-top: 50px;
  width: 60%;
}
.action-button:active {
  transform: scale(0.95);
}

#card-button {
  width: 100%;
  height: 100%;
  font-size: 30px;
  position: relative;
  transition: transform 0.35s;
  transform-style: preserve-3d;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
}

@media (orientation: landscape) {
  #card-button {
    width: 30%;
    min-width: 300px;
  }
  .action-button {
    width: 50%;
  }
}

#card-button.flipped {
  transform: rotateX(180deg);
}

#card-button .front,
#card-button .back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

#card-button p {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}
#card-button .back {
  transform: rotateX(180deg);
  color: var(--element-bg-color);
}
#card-button.flipped .back {
  color: white;
}

